--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/router": "^15.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "smoke-node": "^0.8.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.4",
